btn group of smol btns

--- a/frontend/alt.html
+++ b/frontend/alt.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sh∅ut int∅ the v∅id </title>
-    <link rel="stylesheet" type="text/css" href="fuckin.css">
+    <title>The Void</title>
+    <link rel="stylesheet" type="text/css" href="alt.css">
 </head>
 <body>
     <div class="header">
-        <!-- <img class="hamburger-icon" src="https://media.discordapp.net/attachments/450882673448058881/747571918399602759/04db56aade8a66d5.jpg"> -->
-        <img class="hamburger-icon" src="icons/hamburger.svg">
-        <h1 class="header-title">sh∅ut int∅ the {v∅id}</h1>
-        <div class="button-group">
-            <button class="smol-btn left-btn">ALL</button><button class="smol-btn">
-                SHOUTS</button><button class="smol-btn right-btn">
-                    ECHOES</button>
-        </div>
+        <img class="hamburger" src="icons/hamburger.svg">
+        <div class="title">The Void {0}</div>
     </div>
     <div class="main-content">
         <h2>a niche product</h2>
@@ -27,11 +21,6 @@
         <p>Cras et neque sit amet leo accumsan pellentesque eu et dui. Nulla fermentum neque est, lacinia ultricies quam ultricies sed. Etiam id mi lacinia, convallis justo at, pharetra sem. Cras a sagittis orci. Donec vulputate a elit a cursus. Duis sem ipsum, volutpat sed convallis eget, finibus sit amet ipsum. Duis pulvinar ante ac justo rhoncus, ornare bibendum mauris dignissim. Pellentesque eu arcu erat. Maecenas sed venenatis libero. Aenean euismod nunc bibendum velit faucibus venenatis. Fusce quis malesuada lorem.</p>
         <p>Nam nec vestibulum justo. Pellentesque ac commodo risus. Nullam gravida ex sit amet nisi venenatis mollis. Maecenas et nisi vestibulum, semper tellus sed, lobortis nulla. Nam nec lectus odio. Maecenas a sapien a eros accumsan blandit vitae quis metus. Integer hendrerit metus ut urna consequat efficitur ac quis sem. Pellentesque condimentum, est et pulvinar tristique, lectus sapien fermentum massa, non porttitor dui elit eu ante. Etiam luctus ipsum id dui convallis efficitur.</p>
     </div>
-    <div class="footer">
-        <div class="footer-button">{∅}</div>
-        <div class="footer-button">expl</div>
-        <div class="footer-button">notif</div>
-        <div class="footer-button">echos</div>
-    </div>
+    <div class="footer">&copy; westerly</div>
 </body>
 </html>
